fixed egret section on small screens

--- a/dev/2015/fall/briefs-fall-2015/briefs-news-notes-fall-2015.scss
+++ b/dev/2015/fall/briefs-fall-2015/briefs-news-notes-fall-2015.scss
@@ -492,6 +492,9 @@ main article.story {
         padding-right: 0;
       }
     }
+    &.story #artistic-nature h2 {
+      width: auto;
+    }
   }
 }
 
